# CanvasAIMLStudio

./: .env.example  .gitignore  CanvasML Studio-blueprint_v1.md  CanvasML Studio_antigravity-translab-prompts.md  README.md  check_db.py  docker-compose.yml  pyproject.toml  skills-lock.json  translab-blueprint.md
.github/workflows/: ci.yml  docker-build.yml
console/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
console/src/: App.tsx  index.css
deploy/: docker-compose.yml
deploy/helm/: README.md
deploy/terraform/: README.md
infra/db/: init.sql
migrations/: env.py
migrations/versions/: 22533cb942c7_migrate_all_services_to_postgresql.py
oorequirements/: CanvasML Studio AI Platform – Product Requirements Document.docx  CanvasML Studio AI Platform – Product Requirements Document.md
schemas/migrations/: alembic.ini  env.py
schemas/openapi/: README.md
services/agentic/: README.md  __init__.py  agents.py  automl_agent.py  automl_tools.py  automl_workflow.py  models.py  policy_engine.py  state.py  tools.py  workflow.py  workflow_api.py
services/connectors/: README.md  __init__.py  base.py  catalog_api.py  csv_connector.py  factory.py  models.py  postgres_connector.py  s3_connector.py
services/drift/: README.md
services/federation/: README.md
services/gateway/: requirements.txt
services/ingestion/: README.md  __init__.py  engine.py
services/ml/: README.md  __init__.py  db.py  drift.py  experimentation.py  fairness.py  ml_api.py  monitoring.py  pipeline.py  profiling.py  registry.py  training.py  xai.py
(+40 files in other folders)
