[project]
name = "canvasml-studio"
version = "0.1.0"
description = "CanvasML Studio / TransLab — AI-powered data, ML, and agentic decisioning platform for BFSI"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["canvasml"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
